--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,30 @@
-# Custom stuff
-/data
-*.db
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# Custom
+data/
+.db
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
 *.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.vi
+*~
 
-# Sphinx documentation
-docs/_build/
+# OS folders
+.DS_Store
+._*
+Thumbs.db
 
-# PyBuilder
-target/
+# Folders to ignore
+.hg
+.svn
+.CVS
+.idea
+
+node_modules
+dist
+.tmp
+app/bower_components
